--- a/ST7735_4C123/ST7735.build_log.htm
+++ b/ST7735_4C123/ST7735.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\Aku\Documents\EE Programming Classes\EE 445L\ST7735_4C123\ST7735.uvproj
+C:\Users\Aku\Documents\GitHub\445LTeamCouch\ST7735_4C123\ST7735.uvproj
 Project File Date:  09/07/2014
 
 <h2>Output:</h2>
@@ -14,13 +14,25 @@ compiling ST7735.c...
 compiling ST7735TestMain.c...
 compiling fixed.c...
 linking...
-Program Size: Code=6168 RO-data=2052 RW-data=48 ZI-data=1024  
+Program Size: Code=3012 RO-data=2052 RW-data=44 ZI-data=1028  
 ".\ST7735.axf" - 0 Error(s), 0 Warning(s).
-Load "C:\\Users\\Aku\\Documents\\EE Programming Classes\\EE 445L\\ST7735_4C123\\ST7735.axf" 
+Load "C:\\Users\\Aku\\Documents\\GitHub\\445LTeamCouch\\ST7735_4C123\\ST7735.axf" 
 Connecting: Mode=JTAG, Speed=1000000Hz
 Erase Done.
 Programming Done.
 Verify OK.
-</pre>
-</body>
-</html>
+ning and 1 error messages.
+".\ST7735.axf" - 1 Error(s), 1 Warning(s).
+Target not created
+ing and 1 error messages.
+".\ST7735.axf" - 1 Error(s), 2 Warning(s).
+Target not created
+c: 0 warnings, 1 error
+compiling fixed.c...
+fixed.c(36): warning:  #550-D: variable "j" was set but never used
+        int32_t i,j;
+fixed.c(91): warning:  #550-D: variable "j" was set but never used
+        int32_t i,j;
+fixed.c: 2 warnings, 0 errors
+".\ST7735.axf" - 3 Error(s), 2 Warning(s).
+Target not created
