--- a/ST7735_4C123/ST7735.build_log.htm
+++ b/ST7735_4C123/ST7735.build_log.htm
@@ -3,7 +3,7 @@
 <pre>
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
-C:\Users\Aku\Documents\GitHub\445LTeamCouch\ST7735_4C123\ST7735.uvproj
+F:\Personal\CollegeClasses\EE445L\445LTeamCouch\ST7735_4C123\ST7735.uvproj
 Project File Date:  09/07/2014
 
 <h2>Output:</h2>
@@ -12,27 +12,19 @@ assembling startup.s...
 compiling PLL.c...
 compiling ST7735.c...
 compiling ST7735TestMain.c...
+test.h(45): warning:  #1-D: last line of file ends without a newline
+  uint32_t Fixed_uBinOut8s_Test(void);
+ST7735TestMain.c: 1 warning, 0 errors
 compiling fixed.c...
+compiling test.c...
+test.h(45): warning:  #1-D: last line of file ends without a newline
+  uint32_t Fixed_uBinOut8s_Test(void);
+test.c(91): warning:  #1-D: last line of file ends without a newline
+  }
+test.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=3012 RO-data=2052 RW-data=44 ZI-data=1028  
-".\ST7735.axf" - 0 Error(s), 0 Warning(s).
-Load "C:\\Users\\Aku\\Documents\\GitHub\\445LTeamCouch\\ST7735_4C123\\ST7735.axf" 
-Connecting: Mode=JTAG, Speed=1000000Hz
-Erase Done.
-Programming Done.
-Verify OK.
-ning and 1 error messages.
-".\ST7735.axf" - 1 Error(s), 1 Warning(s).
-Target not created
-ing and 1 error messages.
-".\ST7735.axf" - 1 Error(s), 2 Warning(s).
-Target not created
-c: 0 warnings, 1 error
-compiling fixed.c...
-fixed.c(36): warning:  #550-D: variable "j" was set but never used
-        int32_t i,j;
-fixed.c(91): warning:  #550-D: variable "j" was set but never used
-        int32_t i,j;
-fixed.c: 2 warnings, 0 errors
-".\ST7735.axf" - 3 Error(s), 2 Warning(s).
-Target not created
+Program Size: Code=8040 RO-data=2120 RW-data=60 ZI-data=1028  
+".\ST7735.axf" - 0 Error(s), 3 Warning(s).
+</pre>
+</body>
+</html>
